namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: enterprise
  labels:
    name: enterprise
