service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backoffice-service
  namespace: enterprise
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: backoffice-app
