ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backoffice-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/use-private-ip: "false"
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    #appgw.ingress.kubernetes.io/appgw-ssl-certificate: 
    appgw.ingress.kubernetes.io/health-probe-port: "8080"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
           name: backoffice-service
           port:
              number: 80
